tests/src/errors/methodDestructure/arr.spec.2.ts
{
	const arr = [1, 2, 3, 4];
	const i: "isEmpty" = "isEmpty";
	// tslint:disable
	// prettier-ignore
	const b = arr["isEmpty"];
	// tslint:enable
}
export {};
